Bug 240222 - [iOS] Double tapping on YouTube video causes playback to pause instead of seek
Summary: [iOS] Double tapping on YouTube video causes playback to pause instead of seek
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: UI Events (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Wenson Hsieh
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-05-08 20:47 PDT by Wenson Hsieh
Modified: 2022-05-09 10:33 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wenson Hsieh 2022-05-08 20:47:26 PDT
rdar://92637636
Comment 1 Wenson Hsieh 2022-05-08 21:43:31 PDT
Pull request: https://github.com/WebKit/WebKit/pull/561
Comment 2 EWS 2022-05-09 10:33:27 PDT
Committed r293980 (250418@main): <https://commits.webkit.org/250418@main>

Reviewed commits have been landed. Closing PR #561 and removing active labels.